--- a/src/components/Sobre/sobre.css
+++ b/src/components/Sobre/sobre.css
@@ -84,6 +84,7 @@
         justify-content: center;
         align-items: center;
         margin-top: 35px;
+        text-align: center;
         
     }
     .image-sobre{
